--- a/ProyectoJuBa/src/Formularios/frmBuscarIdEmpresa.form
+++ b/ProyectoJuBa/src/Formularios/frmBuscarIdEmpresa.form
@@ -105,6 +105,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="SELECCIONAR"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbSeleccionarActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="170" y="230" width="-1" height="-1"/>
